# en-manhwa-russifier

./: .gitignore  README.en.md  README.md  README.ru.md  pyproject.toml
src/manhwa_russifier/: __init__.py  russifier.py  saver.py
src/manhwa_russifier/internal/: __init__.py  cleaner.py  reader.py  translator.py  typer.py  viewer.py
src/manhwa_russifier/internal/reader/: __init__.py  craft.py  reader.py  vgg16_bn.py
src/manhwa_russifier/internal/simple_lama_inpainting/: __init__.py  model.py  util.py
