[project]
name = "en-manhwa-russifier"
version = "2.1.0"
description = "A complete pipeline for automatic russification of English manhwa: text detection, OCR, translation, replacement, and rendering."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "opencv-python>=4.8.0,<5.0.0",
    "Pillow>=10.0.0,<13.0.0",
    "torch>=2.1.0,<2.4.0",
    "torchvision>=0.16.0,<0.19.0",
    "transformers>=4.40.0,<5.0.0",
    "optimum>=1.16.0,<2.0.0",
    "onnxruntime>=1.16.0,<2.0.0",
    "huggingface_hub>=0.20.0,<1.0.0",
    "spacy>=3.7.0,<4.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "timm>=0.9.0,<2.0.0",
    "py7zr>=0.20.0,<2.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "requests>=2.31.0,<3.0.0",
    "caption-forge @ git+https://github.com/KvaytG/caption-forge.git",
    "en-ru-translator @ git+https://github.com/KvaytG/en-ru-translator.git",
    "simple-image-inpainter @ git+https://github.com/KvaytG/simple-image-inpainter.git",
]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.16.0,<2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "flake8>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
