[project]
name = "en-manhwa-russifier"
version = "2.1.0"
description = "A complete pipeline for automatic russification of English manhwa: text detection, OCR, translation, replacement, and rendering."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "torch>=2.1.0,<2.4.0",
    "torchvision>=0.16.0",
    "transformers>=4.44.0,<4.46.0",
    "tokenizers>=0.19.0",
    "optimum[onnxruntime]==1.17.1",
    "onnxruntime>=1.16.0",
    "huggingface_hub>=0.20.0",
    "spacy>=3.7.0",
    "pydantic>=2.0.0",
    "timm>=0.9.0",
    "py7zr>=0.20.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "caption-forge @ git+https://github.com/KvaytG/caption-forge.git",
    "en-ru-translator @ git+https://github.com/KvaytG/en-ru-translator.git",
    "simple-image-inpainter @ git+https://github.com/KvaytG/simple-image-inpainter.git",
]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.16.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "flake8>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
